# hub-semantic-search-mcp

./: LICENSE  README.md  app.py  pyproject.toml  requirements.in  requirements.txt
