[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hub-semantic-search-mcp"
version = "0.1.0"
description = "MCP server for semantic search of Hugging Face models and datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Daniel van Strien", email = "daniel@huggingface.co" },
]
keywords = [
    "mcp",
    "model-context-protocol", 
    "huggingface",
    "semantic-search",
    "claude",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/davanstrien/hub-semantic-search-mcp"
Repository = "https://github.com/davanstrien/hub-semantic-search-mcp"
Issues = "https://github.com/davanstrien/hub-semantic-search-mcp/issues"

[project.scripts]
hub-semantic-search-mcp = "app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]